NEWS 

==============
ArchaeoPhases 1.4 (Release date: 2017-11-)
==============

* Includes an update of the TempoPlot -> Optimisation of the credible intervals as already done in OccurrencePlot

* Includes a minor update of the vignettes 

* Includes an update of the shiny web application (called by function app_ArchaeoPhases()) that did not work in the previous version



==============
ArchaeoPhases 1.3 (Release date: 2017-09-05)
==============

* Includes an update of the function ImportCSV and a new function for BCal users called ImportCSV.BCal

* Includes an update of the MultiDatesPlot. The graphic is now done with ggplot2

* Includes an update of the TempoPlot and TempoActivityPlot functions

* Includes a new function : OccurrencePlot

* Includes an update of the vignette that describes the main functions of the package

* Includes an update of the shiny web application (called by function app_ArchaeoPhases())


==============
ArchaeoPhases 1.2 (Release date: 2017-06-12)
==============

* Includes an update of the vignette that describes the main functions of the package

* Includes an update of the shiny web application (called by function app_ArchaeoPhases())


==============
ArchaeoPhases 1.1 (Release date: 2017-03-28)
==============

* Includes a vignette that describes the main functions of the package

* Includes an update of the ImportCSV function in order to import the raw MCMC generated by 'BCal' and to convert the MCMC samples from the date format cal BP (in years before 1950) to the date format BC/AD

* Includes a new dataset of MCMC samples generated by BCal : Fishpond.RData

* Includes an update of the coda.mcmc function

* Includes an update of the TempoPlot function using the package 'ggplot2'

* Includes an update of all graphic functions : it is now possible to export all graphics and to choose the colors associated to the characteristics of groups of dates. 
