@@ -40,3 +40,4 @@ import(shinythemes)
 import(readr)
 import(ggthemes)
 import(toOrdinal)
+importFrom(DT, datatable, dataTableOut)
