@@ -8,6 +8,8 @@ ArchaeoPhases 1.4 (Release date: 2017-11-)
 
 * Includes a minor update of the vignettes 
 
+* Includes an update of the function MarginalPlot and adds a new function :MultiMarginalPlot()
+
 * Includes an update of the shiny web application (called by function app_ArchaeoPhases()) that did not work in the previous version
 
 
